Fix: add responsiveness to landing page and fix nav links size and alignment

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -50,7 +50,7 @@ nav {
         background: transparent;
 
         .nav-logo {
-            font-size: 1rem;
+            font-size: 0.75rem;
             transform: translateX(5rem);
             text-transform: lowercase;
 
@@ -66,7 +66,9 @@ nav {
 
             li {
                 text-transform: lowercase;
-
+                a {
+                    font-size: 0.75rem;
+                }
                 &:hover,
                 &:focus {
                     a {
@@ -85,24 +87,23 @@ nav {
 /* Landing Page */
 
 .home-page-container {
-    // background: var(--secondary-blue);
     height: 100vh;
     width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
-
+    overflow-x: hidden;
     h1 {
         position: relative;
         font-weight: 700;
-        font-size: 10rem;
+        font-size: calc(10vw + 0.9rem);
         transform: translate(5rem);
         mix-blend-mode: overlay;
         margin-top: 10rem;
         z-index: -1000;
 
         span {
-            font-size: 12rem;
+            font-size: calc(10vw + 1rem);
         }
     }
 
@@ -161,6 +162,32 @@ nav {
             transform: scale(1.02);
             background: var(--secondary-brown);
             color: var(--white-color)
+        }
+    }
+}
+
+// Landing Page Media Qieries
+
+@media only screen and (max-width: 650px) {
+    .home-page-container {
+        h1 {
+            transform: translate(0);
+            margin: 10rem auto 0 auto;
+            font-size: 2.5rem;
+            text-align: center;
+            span {
+                font-size: 2.5rem;
+            }
+        }
+        .home-text-content {
+            transform: translate(0);
+            margin: 3rem auto 0 auto;
+            p {
+                font-size: 1rem;
+            }
+            .home-button:nth-of-type(2) {
+                margin-left: 0;
+            }
         }
     }
 }
